# liepa2-nao_sintezatorius

./: .gitignore  LICENSE  README.md
src/: README.md
src/.qi/: qibuild.xml  worktree.xml
src/liepaTTS/: CMakeLists.txt  README.md  qiproject.xml
src/liepaTTS/src/: LithUSS.h  abb.txt  balses.txt  evaras_ok1.txt  events.txt  inicialai1.txt  inicialai2.txt  liepaTTS.cpp  main.cpp  matvnt.txt  pijausmodule.cpp  pijausmodule.h  rules.txt  skaitm.txt
src/liepaTTS/src/lib/: ArKirciuoti.cpp  Euristika.cpp  Kircdb.cpp  Kircdb.h  LithUSS.cpp  LithUSS_Error.h  RateChange.cpp  RateChange.h  RateChange1.h  Skiemen.cpp  TextNormalization.cpp  TextNormalization.h  Transkr.cpp  UnitSel.h  UnitSelection.cpp  Vb9r1_13.h  VeiksmaiSuFailais.cpp  db8r1_14.h  fv2id.cpp  fv2id.h  greitis.cpp  ilgiai.cpp  ilgiai.h  nb12.h  resource.h  rezultC.h  stringWithLetterPosition.cpp  stringWithLetterPosition.h  strtokf.cpp  transcrLUSS.cpp  transcrLUSS.h  vgal.h
